src/all-variables/_color.scss
@use 'colors/black';
@use 'colors/white';
@use 'colors/light' as light;
@use 'colors/dark' as dark;
:root,
.slk-color-scheme\:light {
  @include light.define-color-variables;
}

.slk-color-scheme\:dark {
  @include dark.define-color-variables;
}

@media (prefers-color-scheme: dark) {
  :root:not(.slk-color-scheme\:light) {
    @include dark.define-color-variables;
  }
}

